# UltimateTTT

uttt/: Cargo.toml  b.txt  board.rs  tester.py
uttt/src/: ai.rs  bitboard.rs  board.rs  elo.rs  humanplayer.rs  killermovesearch.rs  main.rs  montecarlo-train.rs  montecarloai.rs  pipeai.rs  quietextend.rs  simplesearch.rs  simplesearchcenter.rs  uti.rs
