[package]
name = "uttt"
version = "0.1.0"
authors = ["Andrew Briand <atb8888@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.10"
text_io = "0.1.8"
serde = { version = "1.0.110", features = ["derive"] }
bincode = "1.2.1"
rand = "0.7.3"

[profile.release]
debug = true
