[package]
name = "uttt"
version = "0.1.0"
authors = ["Andrew Briand <atb8888@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.10"
text_io = "0.1.8"
tokio = { version = "0.2.21", features = ["io-util", "process", "time", "macros", "rt-core", "sync"] }
futures = "0.3"
async-trait = "0.1.36"
rand = "0.7.3"

[[bin]]
name = "elo"
path = "src/elo.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[profile.release]
debug = true
